# CircuitPython_sensirion_i2c_sen5x

./: .buildinfo  README.md  README.rst  api.html  conftest.py  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: sphinx-gh-pages.yml
_modules/: index.html
_modules/circuitpython_sensirion_i2c_driver/: device.html  sensirion_command.html
_modules/circuitpython_sensirion_i2c_sen5x/: device.html  measured_values.html  response_types.html
_modules/circuitpython_sensirion_i2c_sen5x/commands/: generated.html  wrapped.html
_modules/sensirion_i2c_sen5x/: measured_values.html  response_types.html
_modules/sensirion_i2c_sen5x/commands/: generated.html  wrapped.html
_sources/: quickstart.rst.txt
docs/: api.rst  conf.py  index.rst  quickstart.rst  requirements.txt
sensirion_i2c_sen5x/: device.py  measured_values.py  response_types.py
sensirion_i2c_sen5x/commands/: generated.py  wrapped.py
tests/device/: test_get_version.py  test_read_device_status.py  test_read_measured_values.py
tests/measured_values/: test_measured_values.py
tests/response_types/: test_air_quality_index.py  test_device_status.py  test_humidity.py  test_mass_concentration.py  test_temperature.py  test_version.py
